--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Welcome to Bookstore Manager</h1>
     
 </body>
-<script src="./magazine.js"></script>
-<script src="./book.js"></script>
-<script src="./publication.js"></script>
-<script src="./script.js"></script>
+<script src="./vehicle.js"></script>
+<script src="./auto.js"></script>
+<script src="./moto.js"></script>
+<script src="./script2.js"></script>
 </html>
